--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 <section id="home" class="hero">
 	<div id="antenne" class="container">
   			<div class="photo">
-    			<img src="images/photo1.png" alt="Léna LIPPARINI">
+    			<img src="photo1.png" alt="Léna LIPPARINI">
  			</div>
   			<div class="label">OFF AIR</div>
 		</div>
