--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
 <nav>
   <a href="#home">Accueil</a>
-  <a href="#about">À propos</a>
+  <a href="#about">Présentation</a>
   <a href="#xp">Parcours</a>
   <a href="#audio">Portfolio</a>
   <a href="#contact">Contact</a>
@@ -677,7 +677,7 @@ liveBtn.addEventListener('click', () => {
     const minutesActuelles = heures * 60 + minutes;
 
     // Définir la plage horaire
-    const debut = { h: 12, m: 30 };   // 16:30
+    const debut = { h: 16, m: 30 };   // 16:30
     const fin = { h: 19, m: 00 };    // 19:00
 
     const minutesDebut = debut.h * 60 + debut.m;
@@ -714,7 +714,7 @@ liveBtn.addEventListener('click', () => {
     const minutesActuelles = now.getHours() * 60 + now.getMinutes();
 
     // Plage ON AIR
-    const debut = { h: 13, m: 30 };   // 09:30
+    const debut = { h: 16, m: 30 };   // 09:30
     const fin = { h: 19, m: 00 };    // 17:15
 
     const start = debut.h * 60 + debut.m;
