--- a/index.html
+++ b/index.html
@@ -444,6 +444,47 @@
                 font-size: 34px;
             }
         }
+	  
+	  
+	  
+	  .play-btn {
+width: 90px;
+height: 90px;
+border-radius: 50%;
+background: #e10600;
+display: flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+transition: transform 0.15s ease, background 0.2s;
+}
+
+.play-btn:hover {
+transform: scale(1.05);
+background: #ff1c14;
+}
+
+.icon {
+width: 0;
+height: 0;
+border-top: 14px solid transparent;
+border-bottom: 14px solid transparent;
+border-left: 22px solid white;
+margin-left: 4px;
+}
+
+.pause {
+display: flex;
+gap: 6px;
+}
+
+.pause span {
+width: 7px;
+height: 26px;
+background: white;
+border-radius: 2px;
+}
+	  
   </style>
 </head>
 <body>
@@ -568,6 +609,7 @@
 	<!-- BLOC A : affiché pendant la plage horaire -->
 <div id="blocA" class="bloc" style="display:none;">
 <div class="onair-player">
+
 			<button id="liveBtn" aria-label="Lecture / Pause">▶</button>
 			<span class="live">● ON AIR <br>ICI ARMORIQUE</span>
 			<input type="range" id="volumeControl" min="0" max="1" step="0.05" value="0.8" aria-label="Volume">
@@ -734,6 +776,29 @@ liveBtn.addEventListener('click', () => {
   // Initialisation + rafraîchissement
   statutAntenne();
   setInterval(statutAntenne, 30000);
+	
+	
+	
+	const btn = document.getElementById('playPauseBtn');
+const icon = document.getElementById('icon');
+const radio = document.getElementById('radio');
+
+let isPlaying = false;
+
+btn.addEventListener('click', () => {
+if (!isPlaying) {
+radio.play();
+icon.className = 'pause';
+icon.innerHTML = '<span></span><span></span>';
+} else {
+radio.pause();
+icon.className = 'icon';
+icon.innerHTML = '';
+}
+isPlaying = !isPlaying;
+});
+	
+	
 </script>
 
 </body>
